--- a/css/riegoestilos.css
+++ b/css/riegoestilos.css
@@ -147,7 +147,7 @@ div.background {
      margin:auto;
      margin-top: 10px;
      margin-left: 10px;
-     background: rgba(0, 97, 255, 0.3);
+     background: #3A72A5;
      -moz-border-radius:10px;
      -webkit-border-radius:10px;
  }
