--- a/css/riegoestilos.css
+++ b/css/riegoestilos.css
@@ -10,10 +10,9 @@ and open the template in the editor.
 
 /* Resetear pagina */
 *{
-  margin:0px;
-  padding:0px;
+    margin:0px;
+    padding:0px;
 }
-
 body {
   	font: 75% "Trebuchet MS", sans-serif;
 	margin: 50px;
@@ -64,9 +63,8 @@ div#contenedor{
     margin-top:15px;
     width: 1000px;
     height: 720px;
-/*    -moz-border-radius:50px;
-    -webkit-border-radius:50px; */
     box-shadow: 2px 5px 8px;
+    border-collapse: separate;
 }
 
 div#cabecera{
@@ -97,13 +95,15 @@ div#imgcabecera {
 div#cuerpo{
     margin: auto;
     margin-top: 0;
-/*    background-color: red;*/
-    with:730px;
+ /*   background-color: red; */
+ /*   width:730px; */
     height: 600px;
     /* Estilos de hoja resumen */
 }
 
 div#menuleft{
+    box-shadow: 0px 5px 8px 0px #333333;
+    border-collapse: separate;
     float:left;
     /*background-color: green;*/ 
     margin: auto;
@@ -114,7 +114,6 @@ div#menuleft{
     font-size :13px;
 /*    -moz-border-radius:20px;
     -webkit-border-radius:20px; */
-    box-shadow: 0px 5px 8px;
 }
 
 div#menuleft pos{
@@ -129,9 +128,18 @@ div#resumenleft{
     float:left;
     margin:auto;
     margin-top: 0px;
-    margin-right: 0px;
-    width: 300x;
-/*    background-color: red;*/
+    margin-left: 0px;
+    width: 280x;
+    /* background-color: red; */
+}
+div#resumenprod{
+    width: 275px;
+}
+div#resumenficha{
+    width: 275px;
+}
+div#resumenactual{
+    width: 275px;
 }
 div#resumenright{
     float:right;
@@ -139,7 +147,7 @@ div#resumenright{
     margin-top: 0px;
     margin-right: 0px;
     width: 430px;
-/*    background-color: green;*/
+ /* background-color: green; */
 }
 div.background {
      float:left;
@@ -192,16 +200,17 @@ div#admright{
     height: 600px;
 }
 div#imputlogin{
+    box-shadow: 0px 5px 8px 0px #333333;
+    border-collapse: separate;
     float:left;
     /*background-color: yellow; */
     margin:auto;
     margin-top: 0px;
     margin-right: 0px;
-    width: 220x;
+    width: 240px;
     height: 400px;
     /*-moz-border-radius:20px;
     //-webkit-border-radius:20px; */
-    box-shadow: 0px 5px 8px;
     font-size :13px;
     font-weight: bold; 
 }
